Fixed CheckServer.java to use /sbin/service, fixed restart job, fixed format bug in init script